Fixed graphic issues on mobile devices

--- a/css/mineblaster.css
+++ b/css/mineblaster.css
@@ -43,17 +43,17 @@ body {
 	color: rgba(255, 255, 255, 0.5);
 }
 
+#regenerate {
+	margin-top: 30px;
+}
+
 #settings {
-	position: absolute;
-	right: 15px;
-	bottom: 15px;
 	margin-right: 0px;
 	display: inline-block;
 	width: 2em;
 	height: 2em;
 	border-radius: 3px;
 	color: #000;
-	position: absolute;
 	background-color: rgba(255, 255, 255, 0.7);
 	background-image: url('../imgs/menu.svg');
 	background-position: center;
@@ -70,7 +70,8 @@ body {
 }
 
 #parameters {
-	border-bottom: 1px rgba(255, 255, 255, 0.2) solid;
+	border-bottom: 2px rgba(255, 255, 255, 0.2) solid;
+	padding: 20px;
 }
 
 #parameters .parameter {
@@ -85,6 +86,11 @@ body {
 	text-transform: uppercase;
 }
 
+#indicators_box {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
 
 #indicators {
 	padding-top: 20px;
@@ -95,17 +101,17 @@ body {
 	display: inline-block;
 	padding: 5px 15px;
 	background: rgba(255, 255, 255, 0.6);
-	border-radius: 3px;
+	border-radius: 99px;
 	font-size: 1em;
 	color: #000;
 }
 
 input[type='number'] {
-	width: 3em;
+	width: 4em;
 	text-align: center;
 	padding: 0.2em;
 	border: none;
-	border-radius: 3px;
+	border-radius: 99px;
 	font-size: 1em;
 }
 
@@ -115,7 +121,7 @@ input[type='button'] {
 	background: rgba(0, 0, 0, 0.3);
 	color: rgba(255, 255, 255, 0.9);
 	border: 2px rgba(255, 255, 255, 0.9) solid;
-	border-radius: 3px;
+	border-radius: 99px;
 	font-weight: bold;
 	font-size: 1em;
 	text-transform: uppercase;
@@ -241,7 +247,8 @@ div#field {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	display: none;
+	display: flex;
+	align-items: center;
 	box-sizing: border-box;
 	z-index: 3000;
 }
@@ -281,6 +288,11 @@ div#field {
 		margin-bottom: 0px;
 	}
 
+	#regenerate {
+		margin: 10px;
+		margin-top: 5px;
+	}
+
 	#parameters .parameter {
 		display: block;
 		margin-bottom: 1em;
@@ -289,4 +301,19 @@ div#field {
 	input[type="button"] {
 		margin-left: 0px;
 	}
+
+	#indicators span.indicator {
+		margin-top: 3px;
+		margin-bottom: 3px;
+		display: block;
+		width: 200px;
+		text-align: left;
+		font-size: 0.7em;
+	}
+
+	#indicators {
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+
 }
